crates/ruff/tests/cli/snapshots/cli__lint__output_format_show_fixes_full.snap
---
source: crates/ruff/tests/cli/lint.rs
info:
  program: ruff
  args:
    - check
    - "--no-cache"
    - "--output-format"
    - full
    - "--select"
    - F401
    - "--fix"
    - "--show-fixes"
    - input.py
---
success: true
exit_code: 0
----- stdout -----

Fixed 1 error:
- input.py:
    1 × F401 (unused-import)

Found 1 error (1 fixed, 0 remaining).

----- stderr -----
