crates/ruff/tests/cli/snapshots/cli__lint__required_import_set_conflicts_with_pyi025.snap
---
source: crates/ruff/tests/cli/lint.rs
info:
  program: ruff
  args:
    - check
    - "--no-cache"
    - "--output-format"
    - concise
    - "--config"
    - "lint.isort.required-imports = [\"from collections.abc import Set\"]"
    - "--select"
    - "I002,PYI025"
    - "-"
  stdin: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
ruff failed
  Cause: Required import `from collections.abc import Set` specified in `lint.isort.required-imports` (I002) conflicts with `unaliased-collections-abc-set-import` (PYI025), which requires this import to be aliased as `AbstractSet`.

Help: Either alias the required import (`from collections.abc import Set as AbstractSet`), or disable PYI025.
